sync: adapt API artifacts to node main
